# NexumDB

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  RELEASE_NOTES_v0.3.0.md  docker-compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-commenter.yml  pr-conflicts.yml  pr-quality.yml  pr-review-reminder.yml  release-please.yml  welcome.yml
nexum_ai/: __init__.py  model_manager.py  optimizer.py  requirements-lock.txt  requirements.txt  rl_agent.py  translator.py
nexum_ai/tests/: requirements.txt  test_model_manager.py  test_translator.py
nexum_cli/: Cargo.toml
nexum_core/: BENCHMARKS.md  Cargo.toml  run_benchmarks.sh
nexum_core/benches/: README.md  executor_bench.rs  filter_bench.rs  sql_bench.rs  storage_bench.rs
nexum_core/src/executor/: filter.rs  mod.rs
nexum_core/src/sql/: parser.rs  types.rs
tests/: integration_test.rs
